force-app/main/default/objects/vlocity_ins__PaymentMethod__c/vlocity_ins__PaymentMethod__c.object-meta.xml
<CustomObject>
    <description>Payment Method stores credit card or other payment processing information for an account.</description>
    <label>Payment Method</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nickname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>