force-app/main/default/objects/vlocity_ins__PaymentMethod__c/fields/vlocity_ins__BankRoutingNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__BankRoutingNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Routing Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>