force-app/main/default/objects/vlocity_ins__PaymentMethod__c/fields/vlocity_ins__Last4Numbers__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Last4Numbers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last4Numbers</label>
    <length>20</length>
    <type>Text</type>
</CustomField>